Fix: Suppress horizontal scrolling

--- a/css/style_index.css
+++ b/css/style_index.css
@@ -13,6 +13,7 @@ body {
 	position:relative;
 	max-width: 100%;
 	margin: auto;
+	overflow-x: hidden;
 }
 
 a {
